--- a/services/network-copy/tox.ini
+++ b/services/network-copy/tox.ini
@@ -5,18 +5,18 @@ envlist = flake8, black, py36, bandit
 [testenv]
 basepython = python3.6
 setenv =
-    PYTHONPATH={toxinidir}/src:{toxinidir}/tests
+    PYTHONPATH={toxinidir}/src:{toxinidir}/test
     AWS_DEFAULT_REGION = us-east-1
 
 passenv = *
 deps = -r{toxinidir}/dev-requirements.txt
 commands =
     coverage run -m py.test {posargs}
-    coverage report -m --omit ".tox/*,tests/*"
+    coverage report -m --omit ".tox/*"
 
 [testenv:py36]
 setenv =
-    PYTHONPATH={toxinidir}/src:{toxinidir}/tests
+    PYTHONPATH={toxinidir}/src:{toxinidir}/test
     AWS_DEFAULT_REGION = us-east-1
     AWS_ACCESS_KEY_ID=moto-rando-id
     AWS_SECRET_ACCESS_KEY=moto-super-secret
@@ -31,7 +31,7 @@ ignore = E203, E266, E501, W503
 deps =
     flake8
 commands =
-    flake8 {toxinidir}/src {toxinidir}/tests
+    flake8 {toxinidir}/src {toxinidir}/test
 
 [testenv:black]
 setenv =
